# projetProgRes

./: .gitignore  CMakeLists.txt  README.md  create-project-files.sh
inbox/: toto.txt  txt
src/: CMakeLists.txt
src/RE216/: CMakeLists.txt  client.c  common.c  group.c  group.h  server.c
src/jalon01/: client.c  server.c
src/jalon02/: CMakeLists.txt
src/jalon03/: CMakeLists.txt  client.c  common.c  common.h  group.c  group.h  list  list.c  list.h  server.c
src/jalon03/jalon03/: common.h  server.c
src/jalon04/: CMakeLists.txt  client.c  common  common.c  common.h  file_trans  file_trans.c  file_trans.h  group.c  group.h  list.c  list.h  server.c
